--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ oauthlib==3.2.2
 Pillow==9.4.0
 pycparser==2.21
 PyJWT==2.6.0
+python-decouple==3.7
 python3-openid==3.2.0
 pytz==2022.6
 requests==2.28.1
